create basic handle windows no crud

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/ojeelafriend/electronjs-app#readme",
   "devDependencies": {
     "electron": "^16.0.2"
+  },
+  "dependencies": {
+    "electron-reload": "^2.0.0-alpha.1"
   }
 }
